# Python-TF-Drifter-Detector

./: .flake8  .gitignore  .safety-project.ini  ARN_BASED_MATCHING_IMPLEMENTATION.md  LICENSE  README.md  REFACTORING_NOTES.md  drift_output.json  live_eventbridge_targets.json  pyproject.toml  requirements.txt  route_tables.json  run_drift_detector.py  test_local_state.py
scripts/: clean-pyc.ps1  dev-setup.ps1  lint.ps1  lint.sh  run-drift-detector.ps1
src/: config.py  main.py  utils.py
src/drift_detector/: __init__.py  core.py  resource_comparators.py  resource_fetchers.py  types.py
src/drift_detector/comparators/: __init__.py  apigateway_comparators.py  base.py  cloudwatch_comparators.py  dynamodb_comparators.py  ec2_comparators.py  ec2_instances_comparator.py  ecs_comparators.py  events_comparators.py  iam_comparators.py  lambda_comparators.py  rds_comparators.py  s3_comparators.py  sqs_comparators.py  sqs_queue_policy_comparators.py  vpc_comparator.py
src/drift_detector/fetchers/: __init__.py  apigateway_fetchers.py  base.py  cloudwatch_fetchers.py  data_source_fetchers.py  dynamodb_fetchers.py  ec2_fetchers.py  ec2_instances_fetcher.py  ecs_fetchers.py  events_fetchers.py  iam_fetchers.py  lambda_fetchers.py  rds_fetchers.py  s3_fetchers.py  sqs_fetchers.py  sqs_queue_policy_fetchers.py  vpc_fetcher.py
tests/: debug_drift_details.py  real_state.json  sample_state.json  test_config.py  test_drift_detector.py  test_local_state.py  test_policy_comparison.py  test_sqs_client.py
